# crew-ai-agents-studies

./: README.md  pyproject.toml
notebooks/: L2_research_write_article.ipynb
src/crew_ai_agents_studies/: __init__.py
